posters now have a min-height to ensure the same alignent

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -31,6 +31,7 @@ body {
 
 .card .poster {
     border: 10px solid white;
+    min-height: 445px;
 }
 
 .card .poster img {
